<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/screen_padding"
    tools:context=".ui.ordering.ConfirmPurchaseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/confirm_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/confirm_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/street_address"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/confirm_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_35"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/confirm_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <CheckBox
            android:id="@+id/confirm_grass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mowing_service"
            app:layout_constraintTop_toBottomOf="@id/confirm_price"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/confirm_purchase_trimming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_trimming"
            app:layout_constraintTop_toBottomOf="@id/confirm_grass"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/confirm_purchase_edging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_edging"
            app:layout_constraintTop_toBottomOf="@id/confirm_purchase_trimming"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/confirm_purchase_blow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_blow"
            app:layout_constraintTop_toBottomOf="@id/confirm_purchase_edging"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/confirm_purchase_pets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_pets"
            app:layout_constraintTop_toBottomOf="@id/confirm_purchase_blow"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/confirm_purchase_locks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_locks"
            app:layout_constraintTop_toBottomOf="@id/confirm_purchase_pets"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/confirm_select_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_payment"
            android:background="@drawable/et_background"
            android:visibility="gone"
            android:padding="@dimen/et_padding"
            android:layout_marginBottom="@dimen/confirm_select_payment_bottom_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>