<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/screen_padding"
    tools:context=".ui.login.LogInFragment">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/et_padding"
        android:gravity="center"
        android:autofillHints="emailAddress"
        android:background="@drawable/et_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/et_padding"
        android:gravity="center"
        android:autofillHints="emailAddress"
        android:background="@drawable/et_background"
        android:layout_marginTop="@dimen/et_margin_top"
        app:layout_constraintTop_toBottomOf="@id/login_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/log_in"
        android:background="@drawable/et_background"
        android:layout_marginTop="@dimen/et_margin_top"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/login_register_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register"
        android:background="@drawable/et_background"
        android:layout_marginTop="@dimen/et_margin_top"
        app:layout_constraintTop_toBottomOf="@id/login_login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="@dimen/et_margin_top"
        app:layout_constraintTop_toBottomOf="@id/login_register_btn"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>