<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/screen_padding"
    android:layout_marginBottom="@dimen/et_margin_top"
    android:background="@drawable/et_background"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/home_row_img"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/et_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/home_row_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_sample"
        android:layout_marginStart="@dimen/et_margin_top"
        app:layout_constraintStart_toEndOf="@id/home_row_img"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/home_row_lot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lot_size_sample"
        android:layout_marginTop="@dimen/et_margin_top"
        android:layout_marginStart="@dimen/et_margin_top"
        app:layout_constraintStart_toEndOf="@id/home_row_img"
        app:layout_constraintTop_toBottomOf="@id/home_row_address"/>

    <TextView
        android:id="@+id/home_row_get_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service"
        android:textColor="?attr/colorOnSecondary"
        android:background="@drawable/et_background"
        android:backgroundTint="?attr/colorPrimary"
        android:padding="@dimen/home_row_text_view_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>